css/sass/style.scss
/* VARIABLES */
@mixin shadow($color:"#000"){ box-shadow:1px 1px 2px $color;}
/* _________________________________________________

320 and Up boilerplate extension
Andy Clarke http://about.me/malarkey
Version: 2
URL: http://stuffandnonsense.co.uk/projects/320andup/
License: http://creativecommons.org/licenses/MIT/
_____________________________________________________

1 ROOT
2 HEADINGS
3 TYPOGRAPHY
4 LINKS
5 FIGURES & IMAGES
6 TABLES
7 FORMS
8 BANNER
9 NAVIGATION
10 CONTENT
11 MAIN
12 COMPLEMENTARY
13 CONTENTINFO
14 GLOBAL OBJECTS
15 VENDOR-SPECIFIC 
16 MODERNIZR
17 TEMPLATE SPECIFICS
18 MEDIA QUERIES

COLOURS 

*/
/* RESETS */
html, body {
  margin: 0;
  padding: 0;
}
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
cite,
code,
del,
dfn,
em,
img,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
dd,
dl,
dt,
li,
ol,
ul,
fieldset,
form,
label,
legend,
button,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td {
  margin: 0;
  padding: 0;
  border: 0;
  font-weight: normal;
  font-style: normal;
  font-size: 100%;
  line-height: 1;
  font-family: inherit;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
nav,
section {
  display: block;
}
audio[controls], canvas, video {
  display: inline-block;
  *display: inline;
  *zoom: 1;
}
/* 320 and Up _________________________________________________

320 and Up
Andy Clarke http://about.me/malarkey
LESS Version: 2
URL: http://stuffandnonsense.co.uk/projects/320andup/
License: http://creativecommons.org/licenses/MIT/

Includes:


__________________________________________________________ */
.sans-serif {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}
.serif {
  font-family: "Cambria, Georgia, Times, " Times New Roman;
}
.monospace {
  font-family: "Monaco", Courier New, monospace;
}
.clearfix {
  zoom: 1;
}
.clearfix:before, .clearfix:after {
  content: "\0020";
  display: block;
  height: 0;
  overflow: hidden;
}
.clearfix:after {
  clear: both;
}
/* --------HONBAN BEGINS-------- */
html {
  overflow-y: scroll;
  background: #add8e6;/* CHANGE BACKGROUND COLOR HERE */
  font-size: 62.5%;
}
body {
  margin: 0 auto;
  padding: 0;
  width: 80%;
  font-size: 16px;
  font-size: 1.6rem;
}
button,
input,
select,
textarea {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: bold;
}
h1 {
  margin-bottom: 0.75em;
  font-size: 48px;
  font-size: 4.8rem;
  line-height: 1.2;
}
h2 {
  margin-bottom: 0.75em;
  font-size: 32px;
  font-size: 3.2rem;
  line-height: 1.2;
}
h3 {
  margin-bottom: 1em;
  font-size: 24px;
  font-size: 2.4rem;
  line-height: 1.3;
}
h4 {
  margin-bottom: 1em;
  font-size: 18px;
  font-size: 1.8rem;
  line-height: 1.25;
}
h5 {
  margin-bottom: 1.5em;
  font-size: 16px;
  font-size: 1.6rem;
}
h6 {
  font-size: 16px;
  font-size: 1.6rem;
}
p,
ol,
ul,
dl,
address {
  margin-bottom: 1.5em;
  font-size: 16px;
  font-size: 1.6rem;
}
p {
  hyphens: auto;
  text-align: justify;
}
ul, ol {
  margin: 0 0 1.5em -24px;
  padding: 0 0 0 24px;
}
li ul, li ol {
  margin: 0;
  font-size: 16px;
  font-size: 1.6rem;
}
dl, dd {
  margin-bottom: 1.5em;
}
dt {
  font-weight: normal;
}
blockquote {
  margin: 0 0 1.5em -24px;
  padding-left: 24px;
  border-left: 1px solid #bfbfbf;
  font-style: italic;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
abbr[title] {
  border-bottom: 1px dotted;
  cursor: help;
}
b, strong {
  font-weight: bold;
}
dfn {
  font-style: italic;
}
hr {
  display: block;
  margin: 1em 0;
  padding: 0;
  height: 1px;
  border: 0;
  border-top: 1px solid #bfbfbf;
}
ins {
  background-color: #c3d9e6;
  color: #000000;
  text-decoration: none;
}
mark {
  background-color: #c3d9e6;
  color: #000000;
  font-style: italic;
  font-weight: bold;
}
pre,
code,
kbd,
samp {
  font-family: "Monaco", Courier New, monospace;
  font-size: 14px;
  font-size: 1.4rem;
  line-height: 1.5em;
}
pre {
  white-space: pre;
  white-space: pre-wrap;
  word-wrap: break-word;
}
q {
  quotes: none;
}
q:before, q:after {
  content: "";
  content: none;
}
small {
  font-size: 14px;
  font-size: 1.4rem;
}
sub, sup {
  font-size: 12px;
  font-size: 1.2rem;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
sup {
  top: -0.5em;
}
sub {
  bottom: -0.25em;
}
a {
  color: #013568;
}
a:visited {
  color: #011b35;
}
a:hover {
  color: #011b35;
}
a:focus {
  outline: thin dotted;
  color: #011b35;
}
a:hover, a:active {
  outline: 0;
}
figure {
  margin-bottom: 1.5em;
}
figure img, figure object, figure embed {
  margin-bottom: 0.75em;
  max-width: 100%;
}
figcaption {
  display: block;
  font-weight: normal;
}
img {
  border: 0;
}
svg:not(:root) {
  overflow: hidden;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
  margin-bottom: 1.5em;
  width: 100%;
  font-size: 14px;
  font-size: 1.4rem;
}
th, td, caption {
  padding: 0.1875em 10px 0.1875em 5px;
}
tfoot {
  font-style: italic;
}
caption {
  background-color: transparent;
}
tbody tr:nth-child(odd) td {
  background-color: #c3d9e6;
}
form {
  margin: 0;
}
fieldset {
  margin-bottom: 1.5em;
  padding: 0;
  border-width: 0;
}
legend {
  *margin-left: -7px;
  padding: 0;
  border-width: 0;
}
label {
  font-weight: normal;
  cursor: pointer;
}
button,
input,
select,
textarea {
  font-size: 12px;
  font-size: 1.2rem;
           line-height:150%;
  margin: 0;
  vertical-align: baseline;
  *vertical-align: middle;
}
button, input {
  line-height: normal;
  *overflow: visible;
}
button,
input[type="button"],
input[type="reset"],
input[type="submit"] {
  cursor: pointer;
}
input[type="checkbox"], input[type="radio"] {
  box-sizing: border-box;
}
input[type="search"] {
  box-sizing: content-box;
}
button::-moz-focus-inner, input::-moz-focus-inner {
  padding: 0;
  border: 0;
}
textarea {
  overflow: auto;
  vertical-align: top;
}
html {
  -webkit-overflow-scrolling: touch;
  -webkit-tap-highlight-color: #c3d9e6;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
}
::-webkit-selection {
  background: #e6e6e6;
  color: #fafafa;
  text-shadow: none;
}
::-moz-selection {
  background: #7bacc8;
  color: #c8977b;
  text-shadow: none;
}
::selection {
  background: #7bacc8;
  color: #c8977b;
  text-shadow: none;
}
button,
input[type="button"],
input[type="reset"],
input[type="submit"] {
  -webkit-appearance: button;
}
::-webkit-input-placeholder {
  font-size: 14px;
  font-size: 1.4rem;
}
input:-moz-placeholder {
  font-size: 14px;
  font-size: 1.4rem;
}
.ie7 img, .iem7 img {
  -ms-interpolation-mode: bicubic;
}
input[type="checkbox"], input[type="radio"] {
  box-sizing: border-box;
}
input[type="search"] {
  -webkit-box-sizing: content-box;
  -moz-box-sizing: content-box;
}
button::-moz-focus-inner, input::-moz-focus-inner {
  padding: 0;
  border: 0;
}
p {
  -webkit-hyphens: auto;
  -webkit-hyphenate-character: "\2010";
  -webkit-hyphenate-limit-after: 1;
  -webkit-hyphenate-limit-before: 3;
  -moz-hyphens: auto;
}
.ir {
  display: block;
  overflow: hidden;
  background-repeat: no-repeat;
  text-align: left;
  text-indent: -999em;
  direction: ltr;
}
.ir br {
  display: none;
}
.hidden {
  display: none;
  visibility: hidden;
}
.visuallyhidden {
  position: absolute;
  margin: -1px;
  padding: 0;
  height: 1px;
  width: 1px;
  overflow: hidden;
  border: 0;
  clip: rect(0 0 0 0);
}
.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus {
  position: static;
  margin: 0;
  height: auto;
  width: auto;
  overflow: visible;
  clip: auto;
}
.invisible {
  visibility: hidden;
}
/* --------PROJECT-DEPENDENT STYLES-------- */
/* GLOBAL */
body{ text-align:center;
      font-family: Lucida Sans Unicode, Lucida Grande, sans-serif;
      color: darkslategray;
      }
h1{ font-size:33px;font-size:3.3rem;margin:.75em 0;
    a:link,a:visited,a:hover,h1 a:active{ text-decoration:none;color:#fff;}
}
h2{ font-size:18px;font-size:1.8rem; 
    a{ font-weight:bold; }
}
p{ line-height:1.5em;margin:1.5em 0; }
.holder{ 
         h2{ margin:.5em;text-decoration:underline; }
         p{ margin:1em;padding:0 0 1em; }
         h2+p{ font-size:14px;font-size:1.4rem; }/* intro text */
}
a{ 
 &:link,&:visited{ outline:none;text-decoration:underline;color:#4d4d4d; }
 &:hover,&:active{ color:#4d4d4d; }
 img{ border:none; }
}
.copyright{
            margin:2em 0;
            p{
                text-align:center;font-size:10px;font-size:1rem;color:#5c5c5c;
               }
            }
noscript{ display:none;/* hides Clicky */ }
/* HOME */
#home { width:80%;margin:0 auto;
        p{font-size:14px;font-size:1.4rem;text-align:center;}
}
#home #menu{ width:100%;left:0;padding:2em 0;}
#menu a:link,#menu a:visited{ position:relative;text-decoration:none;width:100px;padding:40px 0 0;margin:3px;display:inline-block;height:61px;color:#fff;font-weight:bold;background-repeat:no-repeat;background-image:url("http://cdn.yetanotherwebdesigner.com/images/m-nav-bg.png");text-align:center;text-shadow:0 -1px 0 rgba(0,0,0,.3);}
#blog,#blog-small { background-position:0 0;}
#portfolio,#snapshots-small{ background-position:-200px 0;}
#contact,#contact-small{ background-position:-300px 0;}
#y-gplus{ background-position:-300px 0; }
.tooltip{text-indent:-9999px;background:transparent;}/* no tooltip for basic styling */
/* TWEETS */
#tweets,#snapshots,#message{ position:relative; }
.slideshow{ width:100%;margin:0;padding:0;position:relative;
            img { display:block;width:95%;margin:25px auto;padding:0;border-width:1px;border-style:solid;border-color:rgba(194, 194, 194, .5) rgba(199, 199, 199, .5) #e6e6e6;}
}
.polaroid { background:#fff;padding:20px;margin:10px 0;border-radius:10px;
&:last-child{ margin-bottom:20px; }
            }
.no-js .polaroid h2,.no-js .polaroid p,.no-js .polaroid .arrows{ display:none;}
.js .arrows{ display:none; }
.js .polaroid h2, .js .polaroid p{ display:block;text-align:left; }
.js .polaroid h2{ text-align:center;
                  a:link,a:visited{ text-decoration:none; }
a:hover,a:active{ text-decoration:underline; }
                  }
.arrows .prev, .arrows .next{ font-size:1.25em;text-decoration:none;margin:0 20px;background:#4d4d4d;color:#fff;border-radius:10px;padding:5px; }
/* TWEETS */
.tweet .tweet_list{ margin:0;padding:0;list-style-type:none; }
.tweet .tweet_list li, .query .tweet_list li {margin:0 0 20px;padding:40px;background:#ff0066;color:#fff;line-height:200%;@include shadow;border-radius:10px; }
.tweet .tweet_list li a, .query .tweet_list li a{color:#fff;background:#550022;border-radius:50px;text-decoration:none;padding:5px;display:inline-block;}
.scroll-pane{position:relative;height:auto;}
.no-js .scroll-pane{ min-height:150px; }
#twitter-home{ display:inline-block;margin-bottom:50px; }
/* CONTACT */
h1 label{ font-size:1.8rem;font-size:18px; }
.postcard p{ text-align:center; }
p.remain{ display:none; }
input,textarea{ width:100%;background:transparent;border:1px solid #4d4d4d;margin:20px 0 0;border-radius:5px;
                &:focus{ border:1px solid #f60; }
                }
textarea{ min-height:200px; }
input[type="submit"]{ background:#f60 url("http://cdn.yetanotherwebdesigner.com/images/loading-mobile.gif") no-repeat 1em 100px;border:none;color:#fff;padding:10px;border-radius:5px;font-weight:bold;@include shadow(); }
#cform .formerror span,#cform label.error{ background:#ff0000;color:#fff;font-size:12px;font-size:1.2rem;padding:5px;border-radius:5px; }
.thankyou p{ text-align:center; }
/* ERRORS,404 */
.js div.error{ display:none; }
.no-js div.error{ z-index:10;margin:0 auto;position:relative;}
h2.fourofour{ font-family:Lucida Sans Unicode,Lucida Grande,sans-serif; }
.no-js #snapshots+.copyright+div.error{ top:-250px; }
.no-js #tweets+.copyright+div.error{ top:-350px; }
.no-js div.error p{ text-align:center;font-size:14px;font-size:1.4rem;color:red;}

